--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,17 +36,17 @@
     <div data-lift="FormSnippet.renderForm">
       <div id="name" class="form-group">
         <label class="control-label">Name</label>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" autocomplete="off">
          <span class="form-control-feedback">
       </div>
       <div id="email" class="form-group">
         <label class="control-label">Email Address</label>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" autocomplete="off">
         <span class="form-control-feedback">
       </div>  
       <div id="message" class="form-group">
         <label class="control-label">Message</label>
-        <textarea class="form-control" rows="5"></textarea>
+        <textarea class="form-control" rows="5" autocomplete="off"></textarea>
         <span class="form-control-feedback">
       </div>
       <button id="submit" type="submit" class="btn btn-primary" >Submit</button>
